fix: :iphone: make header links shorter so text wrapping looks smooth

--- a/style.css
+++ b/style.css
@@ -78,11 +78,6 @@ ul {
     justify-content: flex-end;
 }
 
-/* Header logo text shouldn't wrap; so don't let it shrink */
-.header-logo-text {
-    flex: none;
-}
-
 /* Banner! First decide an ideal size for the glamour shot */
 .banner img {
     max-width: 400px;
